# Telegram-Deleted-Messages-Manager

./: .actrc  .gitignore  CHANGELOG.md  Makefile  README.md  build.py  main.py  pyproject.toml
.github/: ACT_SETUP.md  FUNDING.yml  RELEASE.md
.github/workflows/: README.md  cd.yml  ci.yml  test-build.yml
src/: main.py
src/models/: chat.py  config.py  message.py
src/services/: export_service.py  resend_service.py  storage_service.py  telegram_service.py
src/ui/: app.py
src/ui/components/: chat_list_item.py
src/ui/screens/: chat_select_screen.py  code_auth_screen.py  config_screen.py  export_config_screen.py  password_auth_screen.py  phone_auth_screen.py  progress_screen.py  resend_config_screen.py
src/utils/: logger.py  paths.py  validators.py
tests/: conftest.py  test_telegram_service.py  test_validators.py
